--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -15,3 +15,9 @@ a{
     text-decoration: none;
     color: black;
 }
+
+
+.tableDetails:hover{
+    color: rgb(3, 164, 175);
+    font-weight: 600;
+}
