--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -7,6 +7,6 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color:#4853e9 ;
+    background-color:#0061cf ;
     text-align: center;
 }
