--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -26,7 +26,28 @@ a{
 
 
 .dropdownMain {
-    margin-top: 50px;
-    left: 45%;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 8.5%;
 
+}
+
+.btnCreateBill {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 15%;
+    background-color: rgb(11, 86, 109);
+}
+
+/* .modalCreateBill{
+    width: 120%;
+} */
+
+
+.modal-content{
+    width: 120%;
 }
