--- a/src/components/Seller/seller.css
+++ b/src/components/Seller/seller.css
@@ -5,3 +5,15 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.btnSeller {
+    width: 100%;
+    height: auto;
+}
+
+.registerSeller {
+    text-align: center;
+    display: block;
+    margin-left:auto ;
+    margin-right: auto;
+}
