--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -36,12 +36,7 @@ a{
 
 
 .dropdownMain {
-
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
     width: 8.5%;
-
 }
 
 .btnCreateBill {
@@ -66,4 +61,7 @@ a{
     width: 120%;
 }
 
-
+.buttons{
+    width: 40%;
+    margin: auto
+}
